tests/golden/resources/kgateway/kgateway/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: syn-kgateway
  name: syn-kgateway
