tests/golden/resources/kgateway/kgateway/10_backend_config_policy_test-backend-config.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: BackendConfigPolicy
metadata:
  name: test-backend-config
  namespace: demo
spec:
  circuitBreakers:
    maxConnections: 100
  targetRefs:
    - group: ''
      kind: Service
      name: nginx
