tests/golden/resources/kgateway/kgateway/10_cluster_role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    rbac.authorization.k8s.io/aggregate-to-cluster-reader: 'true'
  name: kgateway-crds-cluster-reader
rules:
  - apiGroups:
      - gateway.kgateway.dev
    resources:
      - '*'
    verbs:
      - get
      - list
      - watch
