tests/golden/resources/kgateway/kgateway/10_gateway_extension_test-extension.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayExtension
metadata:
  name: test-extension
  namespace: syn-kgateway
spec:
  extAuth:
    grpcService:
      backendRef:
        name: ext-auth-service
        port: 9091
