tests/golden/resources/kgateway/kgateway/10_gateway_parameters_test-params.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayParameters
metadata:
  name: test-params
  namespace: syn-kgateway
spec:
  kube:
    deployment:
      replicas: 2
