tests/golden/resources/kgateway/kgateway/10_listener_policy_test-listener-policy.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: ListenerPolicy
metadata:
  name: test-listener-policy
  namespace: syn-kgateway
spec:
  default:
    httpSettings:
      accessLog:
        - fileSink:
            jsonFormat:
              client_address: '%DOWNSTREAM_REMOTE_ADDRESS%'
              duration: '%DURATION%'
              method: '%REQ(:METHOD)%'
              path: '%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%'
              protocol: '%PROTOCOL%'
              response_code: '%RESPONSE_CODE%'
              start_time: '%START_TIME%'
              upstream_host: '%UPSTREAM_HOST%'
            path: /dev/stdout
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: test-gateway
