tests/golden/resources/kgateway/kgateway/10_reference_grant_allow-secret-access.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: allow-secret-access
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: syn-kgateway
  to:
    - group: ''
      kind: Secret
